--- a/01_init/index.html
+++ b/01_init/index.html
@@ -49,7 +49,8 @@ Front-end training
 
 # Stages timeline
 
-![Alt text](../assets/img/intro.jpg)
+
+![Alt text](../assets/img/intro_01.jpg)
 
 ---
 
