--- a/01_init/index.html
+++ b/01_init/index.html
@@ -110,7 +110,7 @@ Front-end training
 
 - Gitter is the only channel we use for communication
 - You can get answers from lectors during Q&A sessions on Wed and Fri only in "Questions" room
-- Technical issues should be added to "Technical" room
+- Technical issues should be added to "Technical-desk" room
 - "System" room is for admin's messages or announcements only, please do not text there
 - All direct messages to lectors or admins will be ignored
 
