--- a/01_init/index.html
+++ b/01_init/index.html
@@ -39,9 +39,8 @@ Front-end training
 - 12 on-line lessons
 - Test
 - Interviews
-- 4 off-line lessons/workshops
 - Teams setting up
-- 12 off-line lessons/workshops
+- 14 off-line lessons/workshops
 - Projects presentations
 - English Test
 
@@ -49,19 +48,34 @@ Front-end training
 
 # Stages timeline
 
-
-![Alt text](../assets/img/intro_01.jpg)
+ - Jan, 15 - First on-line lesson
+ - Feb, 27 - Test
+ - Feb, 28 - Mar, 1 - Interviews
+ - Mar, 12 - First off-line lesson
+ - May, 21 - Projects presentation
+ - May, 23 - English test
 
 ---
 
+ # On-line stage. Communication
+ 
+ - Gitter is the only channel we use for communication. You will be added to all groups in case of successfull registration
+ - "Lobby" is the room with no rules, anyone can write there
+ - Group room "FL10-[NUM]" is the first place you should ask questions, only group members can write there
+ - You can get answers from lectors during QA sessions on Wed and Fri from 18:00 to 19:00 in "Questions" room. Anyone can write there, but only during the QA sessions
+ - Technical issues should be added to "Technical-desk" room. In case of any issue (f.e. no access to homework) you should first ask in group room, then in lobby and only after that write to "Technical-desk"
+ - "System" room is for admin's and lectors' announcements only. Violators will be dropped from the course without any notifications
+ - Direct messages to admin are prohibited. Violators will be dropped from the course without any notifications
+
+---
 
 # On-line stage. Lessons
 
 - 2 video lessons per week (Tue, Thu 18:00)
 - Every lesson is about 30-90 min
-- All questions regarding lesson and homework should be collected and discussed the next day
+- All questions regarding lesson and homework should be collected and discussed the next day on QA session
 - Lesson is available only at defined timeslot
-- Video recording and sharing is prohibited
+- Video recording and sharing is prohibited. Violators will be dropped from the course without any notifications
 
 
 ---
@@ -80,9 +94,9 @@ Front-end training
 
 # On-line stage. Homework clarification
 
-- Try to find an answer with group mates and ask lectors only after that
+- Try to find an answer with group mates, then in "lobby" and only after that on QA session
 - All questions should be collected and discussed with teachers next day after the lesson
-- Teachers will be available for your questions day after the lesson only at defined timeslot
+- Lectors will be available for your questions day after the lesson only at defined timeslot
 
 
 ---
@@ -92,7 +106,7 @@ Front-end training
 
 - Right after the dead line all homeworks will be screened by bot
 - Then 20 randomly selected homeworks will be checked manually
-- Results will include marks (good, acceptable, bad) and a list of common mistakes with our comments
+- Result will include marks (good, acceptable, bad) and a list of common mistakes with our comments
 
 
 ---
@@ -101,18 +115,6 @@ Front-end training
 # On-line stage. Timeline
 
 ![Alt text](../assets/img/fl8.hw-schedule.jpg)
-
-
----
-
-
-# On-line stage. Communication
-
-- Gitter is the only channel we use for communication
-- You can get answers from lectors during Q&A sessions on Wed and Fri only in "Questions" room
-- Technical issues should be added to "Technical-desk" room
-- "System" room is for admin's messages or announcements only, please do not text there
-- All direct messages to lectors or admins will be ignored
 
 ---
 
@@ -144,14 +146,6 @@ Front-end training
 - Every team will get a lead from Epam
 - Technologies and project idea is selected by team and its lead
 
----
-
-
-# Team Work
-
-- You are one team
-- Help each other
-
 
 ---
 
@@ -163,16 +157,6 @@ Front-end training
 - Learn English!
 
 
-
-
----
-
-
-
-# Additional
-
-- [Schedule, Homeworks, Lessons](https://goo.gl/BzMqnb)
-- [Gitter](https://gitter.im/fl-9/)
 
 
 
