Communication description changes

--- a/01_init/index.html
+++ b/01_init/index.html
@@ -59,13 +59,14 @@ Front-end training
 
  # On-line stage. Communication
  
- - Gitter is the only channel we use for communication. You will be added to all groups in case of successfull registration
+ - Gitter is the only channel we use for communication. You will be added to all gitter rooms in case of successfull registration
  - "Lobby" is the room with no rules, anyone can write there
  - Group room "FL10-[NUM]" is the first place you should ask questions, only group members can write there
  - You can get answers from lectors during QA sessions on Wed and Fri from 18:00 to 19:00 in "Questions" room. Anyone can write there, but only during the QA sessions
  - Technical issues should be added to "Technical-desk" room. In case of any issue (f.e. no access to homework) you should first ask in group room, then in lobby and only after that write to "Technical-desk"
  - "System" room is for admin's and lectors' announcements only. Violators will be dropped from the course without any notifications
  - Direct messages to admin are prohibited. Violators will be dropped from the course without any notifications
+
 
 ---
 
