Communication plan update

--- a/01_init/index.html
+++ b/01_init/index.html
@@ -59,7 +59,7 @@ Front-end training
 
  # On-line stage. Communication
  
- - Gitter is the only channel we use for communication. You will be added to all gitter rooms in case of successfull registration
+ - Gitter is the only channel we use for communication. In case of successfull registration you will be added to all required gitter rooms automatically
  - "Lobby" is the room with no rules, anyone can write there
  - Group room "FL10-[NUM]" is the first place you should ask questions, only group members can write there
  - You can get answers from lectors during QA sessions on Wed and Fri from 18:00 to 19:00 in "Questions" room. Anyone can write there, but only during the QA sessions
