--- a/01_init/index.html
+++ b/01_init/index.html
@@ -88,7 +88,7 @@ Front-end training
 - You have 5 days to complete the homework and place it on Github
 - Homeworks are obligatory
 - Well-timed homeworks are your ticket to the test
-- 3 and more skipped homeworks will not allow you to take the test
+- 3 and more skipped homeworks will not allow you to take the test, in other words 9 and more homeworks should be done to be allowed to the test
 
 ---
 
