change intro for fl 11

--- a/01_init/index.html
+++ b/01_init/index.html
@@ -36,41 +36,40 @@ Front-end training
 
 # Stages
 
-- 12 on-line lessons
+- 12 online lessons
 - Test
 - Interviews
 - Teams setting up
-- 14 off-line lessons/workshops
-- Projects presentations
+- 15 workshops
+- Projects presentations (in each location)
 - English Test
 
 ---
 
 # Stages timeline
 
- - Jan, 15 - First on-line lesson
- - Feb, 27 - Test
- - Feb, 28 - Mar, 1 - Interviews
- - Mar, 12 - First off-line lesson
- - May, 21 - Projects presentation
- - May, 23 - English test
+- Jun, 13 - First online lesson
+- Jul, 25 - Test
+- Jul, 26 - Aug, 01 - Interviews
+- Aug, 06 - First workshop
+- Oct, 24 - Projects presentation
 
 ---
 
- # On-line stage. Communication
+ # Online stage. Communication
  
  - Gitter is the only channel we use for communication. In case of successfull registration you will be added to all required gitter rooms automatically
- - "Lobby" is the room with no rules, anyone can write there
- - Group room "FL10-[NUM]" is the first place you should ask questions, only group members can write there
- - You can get answers from lectors during QA sessions on Wed and Fri from 18:00 to 19:00 in "Questions" room. Anyone can write there, but only during the QA sessions
- - Technical issues should be added to "Technical-desk" room. In case of any issue (f.e. no access to homework) you should first ask in group room, then in lobby and only after that write to "Technical-desk"
+ - "Community" is the room with no rules, anyone can write there
+ - Group room "FL11-[NUM]" is the first place you should ask questions, only group members can write there
+ - You can get answers from lectors during QA sessions on Wed and Fri from 18:00 to 18:45 in "Questions" room. Anyone can write there, but only during the QA sessions
+ - Technical issues should be added to "Technical-desk" room. In case of any issue (f.e. no access to homework) you should first ask in group room, then in "Community" and only after that write to "Technical-desk"
  - "System" room is for admin's and lectors' announcements only. Violators will be dropped from the course without any notifications
  - Direct messages to admin are prohibited. Violators will be dropped from the course without any notifications
 
 
 ---
 
-# On-line stage. Lessons
+# Online stage. Lessons
 
 - 2 video lessons per week (Tue, Thu 18:00)
 - Every lesson is about 30-90 min
@@ -82,20 +81,20 @@ Front-end training
 ---
 
 
-# On-line stage. Homework
+# Online stage. Homework
 
 - Each task will be shared right after the lesson
 - You have 5 days to complete the homework and place it on Github
 - Homeworks are obligatory
 - Well-timed homeworks are your ticket to the test
-- 3 and more skipped homeworks will not allow you to take the test, in other words 9 and more homeworks should be done to be allowed to the test
+- 3 and more skipped homeworks will not allow you to take the test, in other words 10 and more homeworks should be done to be allowed to the test
 
 ---
 
 
-# On-line stage. Homework clarification
+# Online stage. Homework clarification
 
-- Try to find an answer with group mates, then in "lobby" and only after that on QA session
+- Try to find an answer with group mates, then in "Community" and only after that on QA session
 - All questions should be collected and discussed with teachers next day after the lesson
 - Lectors will be available for your questions day after the lesson only at defined timeslot
 
@@ -103,7 +102,7 @@ Front-end training
 ---
 
 
-# On-line stage. Homework check
+# Online stage. Homework check
 
 - Right after the dead line all homeworks will be screened by bot
 - Then 20 randomly selected homeworks will be checked manually
@@ -113,7 +112,18 @@ Front-end training
 ---
 
 
-# On-line stage. Timeline
+# Online stage. Group tasks
+
+- Each group will receive 2-3 group tasks
+- Group will have 3-5 days to finish group tasks
+- Each submitted group task will be checked by front-end lab team
+- Groups with the best solutions will receive additional points to test results
+
+
+---
+
+
+# Online stage. Timeline
 
 ![Alt text](../assets/img/fl8.hw-schedule.jpg)
 
@@ -122,29 +132,28 @@ Front-end training
 # Test and Interview
 
 - Well-timed homeworks are obligatory to be allowed for the test
-- 70-80 ppl with top test resuls will be invited to pass the interview
-- It's possible, that some candidates will be invited to Epam as trainees right after the interview (before the off-line stage)
-- 25-30 ppl will be selected for off-line stage
+- Students with top results will be invited to pass the interview in the selected locations
+- It's possible, that some candidates will be invited to Epam as trainees right after the interview (before the workshop stage)
+- Based on tests and interview results students will be invited to the workshop stage
 
 
 ---
 
-# Off-line stage. Lessons
+# Workshop stage. Lessons
 
 - 2 lessons per week (Tue, Thu 18:00 - 21:00)
 - Every lesson includes theory + practice
-- A laptop is required
 - Presence is obligatory
 
 
 ---
 
-# Off-line stage. Projects
+# Workshop stage. Projects
 
 - Project is an additional activity to apply theory on practice
 - You will create an application from scratch
 - The group will be splitted to teams (4-7 ppl per team)
-- Every team will get a lead from Epam
+- Every team will get a mentor from EPAM
 - Technologies and project idea is selected by team and its lead
 
 
