add to intro info about workshop online

--- a/01_init/index.html
+++ b/01_init/index.html
@@ -141,6 +141,7 @@ Front-end training
 
 # Workshop stage. Lessons
 
+- Workshops will be online
 - 2 lessons per week (Tue, Thu 18:00 - 21:00)
 - Every lesson includes theory + practice
 - Presence is obligatory
