update intro presentation

--- a/01_init/index.html
+++ b/01_init/index.html
@@ -30,37 +30,32 @@ Front-end training
 # Introduction
 ]
 
-
-
 ---
 
 # Stages
 
 - 12 online lessons
-- Test
+- Techincal and English Tests
 - Interviews
-- Teams setting up
-- 15 workshops
-- Projects presentations (in each location)
-- English Test
+- 15 online webinars
+- Additionals stages depending on each location
 
 ---
 
 # Stages timeline
 
-- Jun, 13 - First online lesson
-- Jul, 25 - Test
-- Jul, 26 - Aug, 01 - Interviews
-- Aug, 06 - First workshop
-- Oct, 24 - Projects presentation
+- 03 Dec 2019 - First online lesson
+- 27 Jan 2020 - Tes
+- 30 Jan 2020 - 03 Feb 2020 - Interviews
+- 11 Feb 2020 - First online webinar
 
 ---
 
  # Online stage. Communication
- 
+
  - Gitter is the only channel we use for communication. In case of successfull registration you will be added to all required gitter rooms automatically
  - "Community" is the room with no rules, anyone can write there
- - Group room "FL11-[NUM]" is the first place you should ask questions, only group members can write there
+ - Group room "FL12-[NUM]" is the first place you should ask questions, only group members can write there
  - You can get answers from lectors during QA sessions on Wed and Fri from 18:00 to 18:45 in "Questions" room. Anyone can write there, but only during the QA sessions
  - Technical issues should be added to "Technical-desk" room. In case of any issue (f.e. no access to homework) you should first ask in group room, then in "Community" and only after that write to "Technical-desk"
  - "System" room is for admin's and lectors' announcements only. Violators will be dropped from the course without any notifications
@@ -105,9 +100,9 @@ Front-end training
 # Online stage. Homework check
 
 - Right after the dead line all homeworks will be screened by bot
-- Then 20 randomly selected homeworks will be checked manually
+- Then 20 randomly selected homeworks will be checked manually, other will processed with bot
 - Result will include marks (good, acceptable, bad) and a list of common mistakes with our comments
-
+- Homeworks with a high rate of plagiarism will be declined
 
 ---
 
@@ -132,41 +127,35 @@ Front-end training
 # Test and Interview
 
 - Well-timed homeworks are obligatory to be allowed for the test
-- Students with top results will be invited to pass the interview in the selected locations
-- It's possible, that some candidates will be invited to Epam as trainees right after the interview (before the workshop stage)
-- Based on tests and interview results students will be invited to the workshop stage
+- Students with top results will be invited to pass the interview in the selected location
+- It's possible, that some candidates will be invited to Epam as trainees right after the interview (before the online webinars stage)
+- Based on tests and interview results students will be invited to the online webinars stage
 
 
 ---
 
-# Workshop stage. Lessons
+# Online webinars stage. Lessons
 
-- Workshops will be online
-- 2 lessons per week (Tue, Thu 18:00 - 21:00)
+- 2 webinars per week (Tue, Thu 18:00 - 21:00)
 - Every lesson includes theory + practice
 - Presence is obligatory
 
-
 ---
 
-# Workshop stage. Projects
+# Locations
 
-- Project is an additional activity to apply theory on practice
-- You will create an application from scratch
-- The group will be splitted to teams (4-7 ppl per team)
-- Every team will get a mentor from EPAM
-- Technologies and project idea is selected by team and its lead
+For Ukraine, we have offices in the following locations: Dnipro, Kharkiv, Kyiv, Lviv, Vinnytsia. During online webinars
+each location could have some additional stages like projects, offline courses, adaptation, practices and so on.
+Details will be announced later.
 
 
 ---
-
 
 
 # English
 
 - Your level must be B1 or higher
 - Learn English!
-
 
 
 
