--- a/01_init/index.html
+++ b/01_init/index.html
@@ -45,7 +45,7 @@ Front-end training
 # Stages timeline
 
 - 03 Dec 2019 - First online lesson
-- 27 Jan 2020 - Tes
+- 27 Jan 2020 - Tests
 - 30 Jan 2020 - 03 Feb 2020 - Interviews
 - 11 Feb 2020 - First online webinar
 
